--- a/rest/restapp/static/menu1.css
+++ b/rest/restapp/static/menu1.css
@@ -1,13 +1,78 @@
-.bg{
-    background-image: url(background.jpeg);
-    width: 1600px;
-    height: 700px;
-    color:black;
+.background {
+    width: 1470px;
+    height: 680px;
+    color:purple;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
     font-family:'Times New Roman', Times, serif;
-    background-size: contain;
-    background-repeat: no-repeat;
-    
+    background-image: url(background.jpeg);
+    background-size: cover;
+}
+
+.contents {
+    width: 550px;
+    height: 25px;
+    border: 2px solid black;
+    padding: 10px;
+    background-color: blue;
+    text-align: center;
+    top: 5px;
+    left: 900px;
+    position: relative;
+    word-spacing: 70px;
+}
+
+.menu {
+    color: brown;
+    font-family: Verdana;
+    text-align: left;
+    position: relative;
+    font-size: 200%;
+    top: -50px;
+}
+
+.menugrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));;
+    gap: 50px;
+    justify-items: center;
+    padding: 20px;
+    margin-top: -50px;
+}
+
+.menuitem {
+    background-color: beige;
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+}
+
+.menuitem img {
+    border-radius: 10px;
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+
+.menuitem h1 {
+    font-size: 1.5em;
+    color: black;
+    margin-top: 15px;
+}
+
+.menuitem p {
+    color: black;
+    margin-bottom: 0px;
+}
+
+.copyrights{
+    width: 1510px;
+    height: 20px;
+    background-color: gray;
+    text-align: center;
+    top: 100px;
+    left: -20px;
+    position: relative;
 }
